# sql_saga

./: .aider.conf.yml  .aiderignore  .gitignore  AGENTIC.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  META.json  Makefile  README.md  REFERENCES.md  completely_covers.c  covers_without_gaps.c  covers_without_gaps.h  no_gaps.c  periods--1.2.sql  periods.c  sql_saga--1.0.sql  sql_saga--default_version  sql_saga.c  sql_saga.control  sql_saga.h  todo-pgrx-rust-migration.md  todo-temporal-merge.md  todo.md
doc/: api.md  decision-log.md  postgres-18-temporal-support.md  temporal-merge-performance-profiling.md  temporal_merge_constellations.md  temporal_merge_identity_management.md  temporal_merge_postgresql_extension_plan.md
docs/: api.md  decision-log.md  planner_case_study_088.md  semantical_principles.md  temporal_merge_constellations.md
expected/: 002_era.out  003_api_symmetry.out  004_era_synchronization.out  005_era_synchronize_range.out  006_era_defaults.out  007_era_validation.out  008_era_ephemeral_columns.out  009_security_definer_search_path.out  010_unique_key.out  011_unique_key_search_path_bug.out  012_acl.out  013_unique_key_predicate.out  014_unique_key_exclusion.out  015_unique_key_validation.out  016_unique_key_pk_consistency.out  01_install.out  020_system_versioning.out  021_system_versioning_excluded_columns.out  022_era_with_system_versioning.out  02_periods.out  (+227 more)
native/: Cargo.toml  sql_saga_native.control
native/.cargo/: config.toml
native/src/: executor_cache.rs  introspect.rs  lib.rs  reader.rs  sweep.rs  types.rs  util.rs
(+346 files in other folders)
