[package]
name = "sql_saga_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_sql_saga_native"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.16.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"
opt-level = 2

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
